# hitomi_server_rs

./: .gitattributes  .gitignore  Cargo.toml
.devcontainer/: .env.example  Dockerfile.dev  devcontainer.json  docker-compose.yml
fbs/: gallery.fbs
sql/: fbs_schema.sql  schema.sql
src/: lib.rs  main.rs  model.rs
src/api/: mod.rs  perform_sql.rs
src/domain/: dto.rs  gallery.rs  mod.rs
src/entity/: artist.rs  character.rs  file.rs  gallery.rs  gallery_artist.rs  gallery_character.rs  gallery_file.rs  gallery_group.rs  gallery_parody.rs  gallery_tag.rs  group.rs  language.rs  mod.rs  parody.rs  tag.rs
src/fbs/: converter.rs  gallery_generated.rs  mod.rs
src/mapper/: galleries_mapper.rs  mod.rs
