[package]
name = "hitomi_server_rs"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "resp_to_json"
path = "src/bin/resp_to_json.rs"

[[bin]]
name = "analyze_schema"
path = "src/bin/analyze_schema.rs"

[[bin]]
name = "normalize_json"
path = "src/bin/normalize_json.rs"

[[bin]]
name = "import_to_db"
path = "src/bin/import_to_db.rs"

[dependencies]
anyhow = "1.0.100"
genson-rs = "0.2.0"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_with = "3.16.1"
simd-json = "0.13.11"

tokio = { version = "1.48.0", features = ["full"] }

sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "chrono"] }
indicatif = "0.18.3"
chrono = { version = "0.4.42", features = ["serde"] }
flatbuffers = "25.12.19"
zstd = "0.13.3"
